--- a/StoreApp.Web/ClientAngularApp/app/components/project/items/edit/item.edit.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/items/edit/item.edit.component.html
@@ -17,7 +17,7 @@
         <div class="col-6">
             <br />
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="isActive" [(ngModel)]="item.isActive">
+                <input class="form-check-input" type="checkbox" id="isActive" [(ngModel)]="item.isActive">
                 <label class="form-check-label" for="isActive">Is Active</label>
             </div>
         </div>
