--- a/StoreApp.Web/ClientAngularApp/app/components/0-core/navtop/navtop.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/0-core/navtop/navtop.component.html
@@ -6,6 +6,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
+            <li class="{{ chooseModuleCSS(menuModuleEnum.Clients) }}">
+                <a class="nav-link" routerLink="/clients">Clients</a>
+            </li>
             <li class="{{ chooseModuleCSS(menuModuleEnum.Products) }}">
                 <a class="nav-link" routerLink="/products">Products</a>
             </li>
