new base and menu

--- a/StoreApp.Web/ClientAngularApp/app/components/project/clients/clients.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/clients/clients.component.html
@@ -49,7 +49,7 @@
 
             <tr *ngIf="clients.length == 0">
                 <td colspan="5" style="text-align: center;">
-                    No products.
+                    No clients.
                 </td>
             </tr>
 
