--- a/StoreApp.Web/ClientAngularApp/app/components/project/clients/edit/client.edit.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/clients/edit/client.edit.component.html
@@ -131,7 +131,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="saveContact()" >Save</button>
+                <button *ngIf="!getIsEditingMode()" type="button" class="btn btn-primary" data-dismiss="modal" (click)="saveContact()" >Save</button>
             </div>
         </div>
     </div>
