--- a/StoreApp.Web/ClientAngularApp/app/components/project/orders/orders.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/orders/orders.component.html
@@ -4,24 +4,45 @@
 <div class="card card-body">
     <comp-load></comp-load>
 
+    <div class="row">
+        <div class="col-6">
+            <label for="client">Client</label>
+            <select id="client" class="form-control" [(ngModel)]="clientId" (change)="fillOrders()">
+                <option *ngFor="let client of clients" [ngValue]="client.id">{{client.name}}</option>
+            </select>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-6">
+            <label for="startDate">Start Date</label>
+            <input id="startDate" type="text" class="form-control" [(ngModel)]="startDate" (change)="fillOrders()" />
+        </div>
+
+        <div class="col-6">
+            <label for="endDate">End Date</label>
+            <input id="endDate" type="text" class="form-control" [(ngModel)]="endDate" (change)="fillOrders()" />
+        </div>
+    </div>
+
     <div class="float-right">
-        <a class="btn btn-primary float-right" routerLink="/products/edit">Add</a>
+        <a class="btn btn-primary float-right" routerLink="/orders/edit">Add</a>
     </div>
 
     <table class="table table-bordered">
         <thead>
             <tr>
                 <th>
-                    Name
+                    Date
                 </th>
                 <th>
-                    Price
+                    Client
+                </th>
+                <th>
+                    Description
                 </th>
                 <th>
                     Is Active
-                </th>
-                <th>
-                    Items
                 </th>
                 <th>
                     Actions
@@ -29,39 +50,34 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let model of productsModels">
+            <tr *ngFor="let order of orders">
                 <td>
-                    {{model.product.name}}
+                    {{order.date}}
                 </td>
                 <td>
-                    {{model.product.price}}
+                    {{order.client.name}}
                 </td>
                 <td>
-                    {{model.product.isActive}}
+                    {{order.description}}
                 </td>
                 <td>
-                    {{model.getItemsNames()}}
+                    {{order.isActive}}
+                </td>
 
-                    <a *ngIf="model.getIsToHide()" class="btn btn-sm" (click)="setDisplayed(model)" title="{{getTitle(model)}}">
-                        <span class="oi oi-arrow-circle-{{getArrowDirection(model)}}" aria-hidden="true"></span>
-                    </a>
-
-
-                </td>
                 <td>
-                    <a class="btn btn-light btn-sm" [routerLink]="['/products/edit', model.product.id]" title="edit">
+                    <a class="btn btn-light btn-sm" [routerLink]="['/orders/edit', order.id]" title="edit">
                         <span class="oi oi-pencil" aria-hidden="true"></span>
                     </a>
-                    <a class="btn btn-light btn-sm" (click)="remove(model)" title="remove">
+                    <a class="btn btn-light btn-sm" (click)="remove(order)" title="remove">
                         <span class="oi oi-trash" aria-hidden="true"></span>
                     </a>
 
                 </td>
             </tr>
 
-            <tr *ngIf="productsModels.length == 0">
+            <tr *ngIf="orders.length == 0">
                 <td colspan="5" style="text-align: center;">
-                    No products.
+                    No orders.
                 </td>
             </tr>
 
