--- a/StoreApp.Web/ClientAngularApp/app/components/0-core/navtop/navtop.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/0-core/navtop/navtop.component.html
@@ -25,7 +25,7 @@
         <div class="form-inline my-2 my-lg-0">
             <ul class="navbar-nav mr-auto">
                 <li class="{{ chooseModuleCSS(menuModuleEnum.Users) }}">
-                    <a class="nav-link" routerLink="/users/edit/{{userName}}">{{userName}}</a>
+                    <a class="nav-link" routerLink="/user">{{userName}}</a>
                 </li>
             </ul>
         
