datepicker and directive

--- a/StoreApp.Web/ClientAngularApp/app/components/project/clients/edit/client.edit.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/clients/edit/client.edit.component.html
@@ -1,6 +1,6 @@
 
 <comp-navtop></comp-navtop>
-<div class="panel card-body">
+<div class="card card-body">
     <comp-load></comp-load>
 
     <div class="row">
