--- a/StoreApp.Web/ClientAngularApp/app/components/project/items/edit/item.edit.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/items/edit/item.edit.component.html
@@ -1,6 +1,6 @@
 
 <comp-navtop></comp-navtop>
-<div class="panel card-body">
+<div class="card card-body">
     <comp-load></comp-load>
 
     <div class="row">
@@ -24,9 +24,9 @@
     </div>
 
 
-        <div class="float-sm-right">
-            <a class="btn btn-secondary" routerLink="/items">Cancel</a>
-            <button class="btn btn-primary" (click)="save()">Save</button>
-        </div>
+    <div class="float-sm-right">
+        <a class="btn btn-secondary" routerLink="/items">Cancel</a>
+        <button class="btn btn-primary" (click)="save()">Save</button>
+    </div>
 
 </div>
