--- a/StoreApp.Web/ClientAngularApp/app/components/project/clients/edit/client.edit.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/clients/edit/client.edit.component.html
@@ -119,8 +119,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="price">Email</label>
-                    <input id="price" type="text" class="form-control" [(ngModel)]="currentContact.email" required />
+                    <label for="email">Email</label>
+                    <input id="email" type="text" class="form-control" [(ngModel)]="currentContact.email" required />
                 </div>
 
                 <div class="form-group">
@@ -131,7 +131,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button *ngIf="!getIsEditingMode()" type="button" class="btn btn-primary" data-dismiss="modal" (click)="saveContact()" >Save</button>
+                <button *ngIf="!getIsEditingMode()" type="button" class="btn btn-primary" data-dismiss="modal" (click)="saveContact()" >Add</button>
             </div>
         </div>
     </div>
