--- a/StoreApp.Web/ClientAngularApp/app/components/project/products/edit/product.edit.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/products/edit/product.edit.component.html
@@ -6,24 +6,24 @@
     <div class="row">
         <div class="col-6">
             <label for="name">Name</label>
-            <input id="name" type="text" class="form-control" [(ngModel)]="model.product.name" required />
+            <input id="name" type="text" class="form-control" [(ngModel)]="product.name" required />
         </div>
 
         <div class="col-6">
             <label for="description">Description</label>
-            <input id="description" type="text" class="form-control" [(ngModel)]="model.product.description" required />
+            <input id="description" type="text" class="form-control" [(ngModel)]="product.description" required />
         </div>
 
 
         <div class="col-6">
             <label for="price">Price</label>
-            <input id="price" type="text" class="form-control" [(ngModel)]="model.product.price" required />
+            <input id="price" type="text" class="form-control" [(ngModel)]="product.price" required />
         </div>
 
         <div class="col-6">
             <br />
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="isActive" [(ngModel)]="model.product.isActive">
+                <input class="form-check-input" type="checkbox" id="isActive" [(ngModel)]="product.isActive">
                 <label class="form-check-label" for="isActive">Is Active</label>
             </div>
         </div>
@@ -34,7 +34,7 @@
             Items of product
         </h5>
 
-        <a class="btn btn-light btn-sm" (click)="add()" title="add">
+        <a class="btn btn-light btn-sm" (click)="add()" title="add" data-toggle="modal" data-target="#modalItem">
             <span class="oi oi-plus" title="add" aria-hidden="true"></span>
         </a>
 
@@ -53,25 +53,24 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let itemModel of model.items">
-                    <td (click)="onClickItem(itemModel)">
-                        <p *ngIf="!itemModel.isEditingItem">{{itemModel.item.name}}</p>
-                        <select *ngIf="itemModel.isEditingItem" di-focus class="form-control" [(ngModel)]="itemModel.item.id" (focusout)="onFocusOutItem(itemModel)">
-                            <option *ngFor="let item of items" [ngValue]="item.id">{{item.name}}</option>
-                        </select>
-                    </td>
-                    <td (click)="onClickCount(itemModel)">
-                        <p *ngIf="!itemModel.isEditingCount">{{itemModel.item.count}}</p>
-                        <input *ngIf="itemModel.isEditingCount" di-focus type="text" class="form-control" [(ngModel)]="itemModel.item.count" (focusout)="onFocusOutCount(itemModel)" />
+                <tr *ngFor="let item of product.items">
+                    <td>
+                        {{item.name}}
                     </td>
                     <td>
-                        <a class="btn btn-light btn-sm" (click)="remove(itemModel)" title="remove">
+                        {{item.count}}
+                    </td>
+                    <td>
+                        <a class="btn btn-light btn-sm" (click)="edit(item)" title="edit" data-toggle="modal" data-target="#modalItem">
+                            <span class="oi oi-pencil" title="edit" aria-hidden="true"></span>
+                        </a>
+                        <a class="btn btn-light btn-sm" (click)="remove(item)" title="remove">
                             <span class="oi oi-trash" title="remove" aria-hidden="true"></span>
                         </a>
                     </td>
                 </tr>
 
-                <tr *ngIf="model.items.length == 0">
+                <tr *ngIf="product.items.length == 0">
                     <td colspan="3" style="text-align: center;">
                         No items.
                     </td>
@@ -86,4 +85,38 @@
         <button class="btn btn-primary" (click)="save()">Save</button>
     </div>
 
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="modalItem" tabindex="-1" role="dialog" aria-labelledby="modalItem" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h6 class="modal-title">{{modalTitle}} Item</h6>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+
+                <div class="form-group">
+                    <label for="price">Item</label>
+                    <select class="form-control" [(ngModel)]="currentItem.id" (change)="onItemSelect()">
+                        <option *ngFor="let item of items" [ngValue]="item.id">{{item.name}}</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="count">Count</label>
+                    <input type="text" class="form-control" [(ngModel)]="currentItem.count" />
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button *ngIf="!getIsEditingMode()" type="button" class="btn btn-primary" data-dismiss="modal" (click)="saveItem()">Add</button>
+            </div>
+        </div>
+    </div>
 </div>
