--- a/StoreApp.Web/ClientAngularApp/app/components/project/clients/edit/client.edit.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/clients/edit/client.edit.component.html
@@ -6,12 +6,12 @@
     <div class="row">
         <div class="col-6">
             <label for="name">Name</label>
-            <input id="name" type="text" class="form-control" [(ngModel)]="client.name" required />
+            <input id="name" type="text" class="form-control" [(ngModel)]="client.name" di-model-validator [key]="'Name'" required />
         </div>
 
         <div class="col-6">
-            <label for="description">Number</label>
-            <input id="description" type="text" class="form-control" [(ngModel)]="client.number" required />
+            <label for="number">Number</label>
+            <input id="number" type="text" class="form-control" [(ngModel)]="client.number" di-model-validator [key]="'Number'" required />
         </div>
 
 
